--- a/settings.json
+++ b/settings.json
@@ -1,23 +1,47 @@
 {
-    "editor.fontFamily": "JetBrains Mono Regular",
-    "editor.fontSize": 13,
-    "editor.lineHeight": 1.5,
-    "editor.renderWhitespace": "none",
-    "editor.cursorStyle": "line-thin",
-    "workbench.colorTheme": "Dark",
-    "workbench.iconTheme": "symbols",
-    "editor.minimap.enabled": false,
+    "http.proxySupport": "off",
+    "terminal.integrated.localEchoLatencyThreshold": -1,
+    "terminal.integrated.localEchoEnabled": "off",
+    "workbench.editorAssociations": {
+        "*.md": "vscode.markdown.preview.editor"
+    },
+    "workbench.startupEditor": "none",
+    "editor.fontFamily": "JetBrains Mono, Menlo, Monaco, Courier New, monospace",
+    "editor.fontWeight": "normal",
+    "editor.fontSize": 14,
+    "workbench.editor.showTabs": "none",
+    "breadcrumbs.filePath": "off",
     "breadcrumbs.enabled": false,
-    "editor.stickyScroll.enabled": false,
+    "editor.lineHeight": 1.5,
+    "editor.codeActionsOnSave": {
+        "source.fixAll": "explicit",
+        "source.organizeImports": "always",
+    },
+    "editor.formatOnSave": true,
+    "editor.letterSpacing": 0,
+    "debug.console.fontSize": 12,
     "window.commandCenter": false,
+    "workbench.preferredDarkColorTheme": "Material Theme Ocean",
+    "workbench.preferredLightColorTheme": "Monospace Light",
+    "workbench.iconTheme": "symbols",
+    "window.autoDetectColorScheme": true,
     "workbench.layoutControl.enabled": false,
-    "editor.smoothScrolling": true,
-    "editor.cursorSmoothCaretAnimation": "on",
-    "workbench.list.smoothScrolling": true,
-    "terminal.integrated.smoothScrolling": true,
-    "editor.cursorBlinking": "smooth",
-    "editor.maxTokenizationLineLength": 19998,
-    "editor.suggestLineHeight": 10,
-    "workbench.sideBar.location": "right",
-    "workbench.editor.limit.value": 1
+    "inlineChat.mode": "preview",
+    "errorLens.borderRadius": "0.6rem",
+    "errorLens.codeLensTemplate": "$source $severity $message",
+    "errorLens.gutterIconSet": "borderless",
+    "errorLens.statusBarMessageType": "closestSeverity",
+    "errorLens.statusBarMessageEnabled": true,
+    "errorLens.statusBarMessageTemplate": "ERROR: $message",
+    "errorLens.statusBarMessageAlignment": "right",
+    "errorLens.statusBarIconsAtZero": "hide",
+    "errorLens.scrollbarHackEnabled": true,
+    "errorLens.messageBackgroundMode": "message",
+    "errorLens.padding": "5px 10px",
+    "workbench.productIconTheme": "macos-modern",
+    "symbols.hidesExplorerArrows": false,
+    "[typescriptreact]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "prettier.bracketSameLine": true,
 }
